# trackphysics

./: .gitignore  CLA.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  cla.yml
bench/: datasets.py  metrics.py  perturb.py  run.py  size_ruler.py
bench/report/: report.json  report.md  size_ruler.json  size_ruler.md
bench/synth/: __init__.py  generator.py
examples/: hero_speed.py
src/trackphysics/: __init__.py  calibration.py
src/trackphysics/core/: __init__.py  analysis.py  ballistic.py  events.py  grounding.py  kinematics.py  lift.py  objsize.py  provenance.py  results.py  schema.py  shape.py
src/trackphysics/core/adapters/: __init__.py  generic.py  supervision.py
src/trackphysics/core/presets/: __init__.py  base.py  sphere.py
src/trackphysics/core/robust/: __init__.py  imputation.py  quality.py  smoothing.py
tests/: test_adapter_analyze.py  test_adapter_hardening.py  test_adapters.py  test_ballistic.py  test_bench.py  test_calibration.py  test_contract.py  test_datasets_tt3d.py  test_depth_guard.py  test_events.py  test_hero_demo.py  test_lift_kinematics.py  test_no_domain_terms.py  test_objsize.py  test_pipeline.py  test_robust.py  test_robust_hardening.py  test_robustness_nonfinite.py  test_schema_validation.py  test_shape.py  test_smoothing_rob001.py  test_validation_3d.py
validation/: README.md  adapter_analyze.py  calibrate.py  datasets_tt3d.py  demo_3d_validation.py  demo_engine_check.py  depth_guard_operating_point.py  fit_deployment_calibrator.py  make_tt3d_dump.py  run_3d_validation.py  run_tt3d.py
